# CavestoryRemake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_image.cmake
data/maps/: prtcave.json
lib/nlohmann/: json.hpp
src/: BoundingBox.cpp  BoundingBox.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Level.cpp  Level.h  Player.cpp  Player.h  Slope.cpp  Slope.h  main.cpp
src/exceptions/: InvalidLevelException.cpp  InvalidLevelException.h
src/sprite/: AnimatedSprite.cpp  AnimatedSprite.h  Sprite.cpp  Sprite.h
src/tile/: AnimatedTile.cpp  AnimatedTile.h  Tile.cpp  Tile.h  TileAnimation.cpp  TileAnimation.h  Tileset.cpp  Tileset.h
src/util/: Flags.h  Globals.h
